# keyboard-indicators

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/cli/: calibrate_subcommand.rs  main_command.rs  mod.rs  module_subcommand.rs  start_subcommand.rs
src/core/: args.rs  cli.rs  config_creator.rs  config_manager.rs  constants.rs  keyboard_controller.rs  keymap.rs  mod.rs  module.rs  utils.rs
src/modules/: media_playing.rs  mod.rs  noise.rs  starfield.rs  volume.rs  workspaces.rs
