[package]
name = "keyboard-indicators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openrgb = "0.1.2"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
crossterm = { version = "0.27.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
ksway = "0.1.0"
