[package]
name = "keyboard-indicators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openrgb = "0.1.2"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
crossterm = { version = "0.27.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.111"
swayipc-async = "2.0.2"
futures-util = "0.3.30"
anyhow = "1.0.79"
rgb = "0.8.37"
clap = { version = "^4.4", features = ["derive"] }
dirs = "5.0.1"
